--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,31 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^5.6.5
+  cupertino_icons: ^1.0.8
+  dartz: ^0.10.1
+  dots_indicator: ^4.0.1
+  equatable: ^2.0.7
+  firebase_auth: ^5.5.1
+  firebase_core: ^3.12.1
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.0
+  flutter_lints: ^5.0.0
+  flutter_localizations:
+    sdk: flutter
+  flutter_screenutil: ^5.9.3
+  flutter_svg: ^2.0.17
+  flutter_svg_provider: ^1.0.7
+  fluttertoast: ^8.2.12
+  get_it: ^8.0.3
+  intl_utils: ^2.8.10
+  modal_progress_hud_nsn: ^0.5.1
+  shared_preferences: ^2.5.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  
 
 dev_dependencies:
   flutter_test:
@@ -44,7 +63,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
